# dealers

./: .env  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  idealers-insomnia.json
app/: .env  entrypoint.sh  pyproject.toml
app/idealers/api/: conftest.py
app/idealers/api/tests/v1/: test_cashback.py  test_dealers.py  test_orders.py
app/idealers/api/v1/: urls.py
app/idealers/api/v1/views/: __init__.py  cashback.py  dealers.py  orders.py
app/idealers/authentication/: conftest.py  exceptions.py  managers.py  models.py  serializers.py  services.py
app/idealers/authentication/migrations/: 0001_initial.py
app/idealers/authentication/tests/: test_manager.py  test_services.py
app/idealers/cashback/: models.py  serializers.py  services.py
app/idealers/cashback/migrations/: 0001_initial.py
app/idealers/idealers/: settings.py  urls.py  wsgi.py
app/idealers/orders/: conftest.py  exceptions.py  models.py  serializers.py  services.py
app/idealers/orders/migrations/: 0001_initial.py
app/idealers/orders/tests/: test_services.py
dealers/dealers/: settings.py  urls.py
idealers/: manage.py
idealers/idealers/: asgi.py  settings.py  urls.py
