[tool.poetry]
name = "dealers"
version = "0.1.0"
description = ""
authors = ["Leydson Vieira <leydson.vieira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^4.8.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
autoflake = "^1.4"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
